Fix CI portability (condition_variable + SQLite fallback)

--- a/KeplerSynapseNet/CMakeLists.txt
+++ b/KeplerSynapseNet/CMakeLists.txt
@@ -103,24 +103,35 @@ if(BUILD_TUI)
     endif()
 endif()
 
-# Find SQLite3 with better error handling
+# Find SQLite3 (optional, but enables persistent storage).
+set(HAS_SQLITE3 OFF)
+set(SQLITE3_LIBRARY "")
+set(SQLITE3_INCLUDE_DIR "")
+
 find_package(SQLite3 QUIET)
 if(SQLite3_FOUND)
     set(SQLITE3_LIBRARY ${SQLite3_LIBRARIES})
+    set(SQLITE3_INCLUDE_DIR ${SQLite3_INCLUDE_DIRS})
 else()
     find_library(SQLITE3_LIBRARY sqlite3)
+    find_path(SQLITE3_INCLUDE_DIR sqlite3.h)
     if(NOT SQLITE3_LIBRARY AND APPLE)
         find_library(SQLITE3_LIBRARY sqlite3
             PATHS /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/lib)
     endif()
-    if(NOT SQLITE3_LIBRARY)
-        message(WARNING "SQLite3 not found. Some database features may be disabled.")
-        set(SQLITE3_LIBRARY "")
-    endif()
+endif()
+
+if(SQLITE3_LIBRARY AND SQLITE3_INCLUDE_DIR)
+    set(HAS_SQLITE3 ON)
+else()
+    message(WARNING "SQLite3 headers/library not found. Building with an in-memory DB fallback (no persistence).")
 endif()
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 include_directories(${CMAKE_SOURCE_DIR}/src)
+if(HAS_SQLITE3)
+    include_directories(${SQLITE3_INCLUDE_DIR})
+endif()
 if(BUILD_TUI AND CURSES_FOUND)
     include_directories(${CURSES_INCLUDE_DIR})
 endif()
@@ -171,16 +182,17 @@ if(BUILD_TUI)
     target_link_libraries(synapsed_core PUBLIC ${CURSES_LIBRARIES})
 endif()
 target_compile_definitions(synapsed_core PUBLIC SYNAPSE_BUILD_TUI=$<BOOL:${BUILD_TUI}>)
+target_compile_definitions(synapsed_core PUBLIC SYNAPSE_HAVE_SQLITE3=$<BOOL:${HAS_SQLITE3}>)
 
 if(USE_SECP256K1 AND HAS_SECP256K1)
     target_compile_definitions(synapsed_core PUBLIC SYNAPSE_USE_SECP256K1=1)
     target_link_libraries(synapsed_core PUBLIC secp256k1)
 endif()
 
-if(SQLITE3_LIBRARY)
+if(HAS_SQLITE3)
     target_link_libraries(synapsed_core PUBLIC ${SQLITE3_LIBRARY})
 else()
-    message(STATUS "SQLite3 support disabled (library not found)")
+    message(STATUS "SQLite3 support disabled (in-memory DB fallback)")
 endif()
 
 if(USE_LLAMA_CPP AND HAS_LLAMA)
